--- a/package.json
+++ b/package.json
@@ -1,17 +1,31 @@
 {
   "name": "qm-suppliermagtab",
-  "version": "1.0.0",
+  "version": "1.0.3",
   "description": "tab",
-  "main": "index.js",
+  "main": "./build/index.js",
   "scripts": {
-    "test": "echo \"Error: no test specified\" && exit 1"
+    "dev": "bee-tools run start",
+    "build": "bee-tools run build",
+    "lint": "bee-tools-test run lint",
+    "test": "bee-tools-test run test",
+    "chrome": "bee-tools-test run chrome",
+    "coveralls": "bee-tools-test run coverage",
+    "browsers": "bee-tools-test run browsers",
+    "pub": "bee-tools run pub",
+    "changelog": "bee-tools run changelog"
   },
   "repository": {
     "type": "git",
-    "url": "git+https://github.com/liluxuan1988/qm-supplierMagTab.git"
+    "url": "https://github.com/liluxuan1988/qm-supplierMagTab.git"
   },
   "keywords": [
-   ],
+    "react",
+    "react-component",
+    "ac-gridcn",
+    "iuap-design",
+    "tinper-bee",
+    "Gridcn"
+  ],
   "author": "llx",
   "license": "ISC",
   "bugs": {
@@ -19,12 +33,43 @@
   },
   "homepage": "https://github.com/liluxuan1988/qm-supplierMagTab#readme",
   "dependencies": {
-    "react": "^16.13.1",
-    "react-dom": "^16.13.1"
+    "ac-btns": "latest",
+    "ac-tips": "0.0.10",
+    "async-validator": "^3.2.3",
+    "babel-runtime": "^6.23.0",
+    "bee-button-group": "^2.0.1",
+    "bee-complex-grid": "^2.1.3",
+    "bee-datepicker": "^2.3.12",
+    "bee-form-control": "^2.0.11",
+    "bee-icon": "^1.0.13",
+    "bee-modal": "^2.1.9",
+    "bee-tools": "^1.0.9",
+    "classnames": "^2.2.5",
+    "lodash.clonedeep": "^4.5.0",
+    "lodash.isequal": "^4.5.0",
+    "moment": "^2.24.0",
+    "qm-suppliermagtab": "^1.0.2",
+    "redux": "^4.0.5",
+    "tinper-bee-core": "latest"
   },
   "devDependencies": {
-    "webpack": "^4.44.1",
-    "webpack-cli": "^3.3.12",
-    "webpack-dev-server": "^3.11.0"
+    "chai": "^3.5.0",
+    "enzyme": "^2.4.1",
+    "react": "15.3.2",
+    "react-addons-test-utils": "15.3.2",
+    "react-dom": "15.3.2",
+    "console-polyfill": "~0.2.1",
+    "cz-conventional-changelog": "^2.1.0",
+    "es5-shim": "~4.1.10",
+    "bee-drawer": "0.0.2",
+    "bee-clipboard": "^2.0.0",
+    "bee-panel": "latest",
+    "bee-layout": "latest",
+    "bee-button": "latest"
+  },
+  "peerDependencies": {
+    "react": ">= 15.3.0",
+    "react-dom": ">= 15.3.0",
+    "prop-types": ">= 15.6.0"
   }
 }
