--- a/package.json
+++ b/package.json
@@ -1,6 +1,6 @@
 {
   "name": "qm-suppliermagtab",
-  "version": "1.0.3",
+  "version": "1.0.4",
   "description": "tab",
   "main": "./build/index.js",
   "scripts": {
@@ -33,6 +33,7 @@
   },
   "homepage": "https://github.com/liluxuan1988/qm-supplierMagTab#readme",
   "dependencies": {
+    "@types/prop-types": "^15.7.3",
     "ac-btns": "latest",
     "ac-tips": "0.0.10",
     "async-validator": "^3.2.3",
@@ -48,7 +49,6 @@
     "lodash.clonedeep": "^4.5.0",
     "lodash.isequal": "^4.5.0",
     "moment": "^2.24.0",
-    "qm-suppliermagtab": "^1.0.2",
     "redux": "^4.0.5",
     "tinper-bee-core": "latest"
   },
